--- a/src/css/App.css
+++ b/src/css/App.css
@@ -135,5 +135,10 @@ footer ul {
     padding-inline: 6px;
 }
 .dark .techstack{
-    background-color: var(--cardet);
+    background-color:rgba(229, 229, 231, 0.212)!important;
+    margin-bottom: 0;
+    padding-bottom: 0!important;
+    width: fit-content!important;
+    margin-inline: auto!important;
+    padding-inline: 6px;
 }
