--- a/src/css/App.css
+++ b/src/css/App.css
@@ -50,6 +50,7 @@ h1,h2{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-bottom: 30px;
 }
   
 @media screen and (max-width: 1060px) {
