update tech skills and about me description

--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -99,7 +99,7 @@
     margin: 10px 0;
 } 
 .contact-sect div {
-    text-align: justify;
+    text-align: start;
     display: flex;
     flex-direction: column;
     gap: 20px;
