--- a/src/css/About.css
+++ b/src/css/About.css
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: justify;
+    text-align: start;
     padding: 40px;
     border-radius: 20px;
     box-shadow: 4px 6px 10px -1px rgba(0,0,0,0.75);
@@ -24,7 +24,7 @@
     margin: 20px 20px;
 }
 .details-about-sec  h3 {
-    font-size: 1.3rem;
+    font-size: 1rem;
     text-transform: inherit!important;
 }
 .about-wrapper h3{
