--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -85,7 +85,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    text-align: justify;
+    text-align: start;
 }
 
 .light .nav-tabs li button {
